# shelly

./: CMakeLists.txt  README.md
src/: execute.h  main.cpp  prompt.cpp  prompt.h  shelly.h  util.h
src/builtin/: all_commands.h  builtin.h  cd.h  exit.h  history.h  registry.cpp  registry.h
test/: prompt_test.cpp
